Organized notebooks. Everything is running but need to rewrite from notebook 5 onward

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 /data/raw/*
 !.gitkeep
 
+# Results
+/results/*
+
 # Mac OS-specific storage files
 .DS_Store
 
@@ -191,3 +194,5 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+
